--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode development",
+    "qa": "webpack --mode qa",
     "build": "webpack --config webpack.config.js",
     "start-hot": "node server.js",
     "start": "webpack serve --open",
