--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,9 @@
     "ignorePatterns": [
       "dist/",
       "build/",
-      "luxon.js", "**/assets/*.js",
+      "luxon.js",
+      "main.js", 
+      "**/assets/*.js",
       "webpack.config.js"
     ]
   }  
