--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{ "homepage":"https://mrigorir.github.io/leaderboard",
   "name": "webpack-demo",
   "version": "1.0.0",
   "description": "",
@@ -10,14 +10,18 @@
     "build": "webpack --config webpack.config.js",
     "start-hot": "node server.js",
     "start": "webpack serve --open",
-    "server": "node server.js"
+    "server": "node server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^5.2.7",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
+    "push-dir": "^0.4.1",
     "style-loader": "^3.1.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
