--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage":"https://mrigorir.github.io/leaderboard",
+{
+  "homepage": "https://mrigorir.github.io/leaderboard",
   "name": "webpack-demo",
   "version": "1.0.0",
   "description": "",
@@ -7,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
     "qa": "webpack --mode qa",
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack",
     "start-hot": "node server.js",
     "start": "webpack serve --open",
     "server": "node server.js",
@@ -21,14 +22,13 @@
     "css-loader": "^5.2.7",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
-    "push-dir": "^0.4.1",
     "style-loader": "^3.1.0",
+    "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "webpack-dev-middleware": "^5.0.0",
-    "webpack": "^5.44.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21"
   }
